Added {Allow,Deny}RemoteInteractiveLogonRight to keep test simple
Thus the check can be done with the `ping` ansible module instead of
driving `machinectl login` with expect

--- a/roles/sssd_adgpo_test/templates/SeAllowDenyInteractiveLogonRight.inf.j2
+++ b/roles/sssd_adgpo_test/templates/SeAllowDenyInteractiveLogonRight.inf.j2
@@ -6,3 +6,5 @@ Revision=0
 [Privilege Rights]
 SeInteractiveLogonRight = *{{ test_user_sid }},*S-1-5-32-544
 SeDenyInteractiveLogonRight = *{{ test_user_sid }}
+SeRemoteInteractiveLogonRight = *{{ test_user_sid }},*S-1-5-32-544
+SeDenyRemoteInteractiveLogonRight = *{{ test_user_sid }}
