--- a/roles/sssd_adgpo_test/templates/SeDenyInteractiveLogonRight.inf.j2
+++ b/roles/sssd_adgpo_test/templates/SeDenyInteractiveLogonRight.inf.j2
@@ -5,3 +5,4 @@ signature="$CHICAGO$"
 Revision=0
 [Privilege Rights]
 SeDenyInteractiveLogonRight = *{{ test_user_sid }}
+SeDenyRemoteInteractiveLogonRight = *{{ test_user_sid }}
