--- a/roles/sssd_adgpo_test/templates/SeInteractiveLogonRight.inf.j2
+++ b/roles/sssd_adgpo_test/templates/SeInteractiveLogonRight.inf.j2
@@ -5,3 +5,4 @@ signature="$CHICAGO$"
 Revision=0
 [Privilege Rights]
 SeInteractiveLogonRight = *{{ test_user_sid }},*S-1-5-32-544
+SeRemoteInteractiveLogonRight = *{{ test_user_sid }},*S-1-5-32-544
